--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,12 @@ spring:
         enabled: true
   profiles:
     active: dev
-    include: oauth
+    include: secret
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://127.0.0.1:3306/devchall__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
-    username: 'DB 사용자명'
-    password: 'DB 비밀번호'
+    username: root
+    password:
 
   jpa:
     hibernate:
