Feat: Challenge List, Challenge Detail 챌린지 리스트와 개별의 디테일 페이지 생성

--- a/.gitignore
+++ b/.gitignore
@@ -140,7 +140,7 @@ fabric.properties
 hs_err_pid*
 replay_pid*
 
-### Custon ###
+### Custom ###
 application-secret.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
