--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     include: secret
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://127.0.0.1:3306/devchall__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    url: jdbc:mariadb://127.0.0.1:3306/devchall__dev?allowPublicKeyRetrieval=true&useSSL=false?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul?
     username: root
-    password:
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: create
