Fix: Resolve forbidden challenge creation
challenge creation is working now

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,4 @@ logging:
     com.challenge.devchall: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
+    org.springframework.security: DEBUG
