Feat: getSmallPhotoUrl, getLargePhotoUrl Method 이미지 리사이징- 작은사진, 큰 사진 메서드 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,5 @@ cloud:
     s3:
       endpoint: https://kr.object.ncloudstorage.com
       bucket: devchall
+  cdn:
+    url: http://iztyfajjvmsf17707682.cdn.ntruss.com/
