Feat: NotProd Multipartfile 임시처리  챌린지 생성에서, Multipartfile 이슈 임시 처리

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
+	// 추가 의존성
+	testImplementation 'org.springframework:spring-test:6.0.9'
+
 	//스프링시큐리티
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
