Feat: AppConfig로 챌린지 관련 변수 yml Value 처리 챌린지 관련 변수를 yml에 작성, AppConfig에 저장하여 빈처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,6 +71,8 @@ cloud:
     url: http://iztyfajjvmsf17707682.cdn.ntruss.com/
 
 custom:
-  maxLength:
-    title: 25
-    contents: 500
+  challenge:
+    weeklyPoint: 50
+    titleLength: 25
+    contentLength: 500
+    memberLimit: 50
