메인페이지 챌린지 페이징 및 모집중인 챌린지만 출력 (#130)
Co-authored-by: Y39 <rla4878@gmail.com>
Co-authored-by: SeoMoonk <39723465+SeoMoonk@users.noreply.github.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,6 +80,7 @@ custom:
     titleLength: 24
     contentLength: 500
     memberLimit: 50
+    pageable: 10
     reportCount: 10
     memberOutCount: 3
 
